--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
             <div class="skills__info">
 
                 <div class="skills__data">
-                    <div style="background-color: white;" class="skills__blob">
+                    <div style="background-color: hsl(207, 4%, 99%);" class="skills__blob">
                         <img src="" alt="">
                     </div>
 
