Add Projects Section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                   </svg>Volunteer
                             </a>
                         </li>
-                        <!-- <li class="nav__item">
+                        <li class="nav__item">
                             <a href="#projects" class="nav__link">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-code" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -79,7 +79,7 @@
                                     <line x1="14" y1="4" x2="10" y2="20" />
                                   </svg> Projects
                             </a>
-                        </li> -->
+                        </li>
                         <li class="nav__item">
                             <a href="#ambassador" class="nav__link">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-award" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -136,7 +136,7 @@
 
                         <div class="home__blob grid">
                             <div class="home__perfil">
-                                <img src="assets/img/perfil.png" alt="Profile Picture">
+                                <img src="assets/img/profile.png" alt="Profile Picture">
                             </div>
 
                             <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes">
@@ -728,7 +728,7 @@
             </div>
             </section>
 
-            <!-- ==================== PROJECTS ====================
+            <!-- ==================== PROJECTS ==================== -->
             <section class="projects section" id="projects">
                 <h2 class="section__title">Projects</h2>
                 <span class="section__subtitle">Most Recent Work</span>
@@ -737,52 +737,39 @@
                     <div class="projects__container swiper">
                         <div class="swiper-wrapper">
                         <div class="projects__content swiper-slide">
-                            <img src="assets/img/project1.jpg" alt="Project Image" class="projects__img">
-                            <span class="projectss__subtitle">Web</span>
-                            <h1 class="projects__title">Personal Portfolio Website</h1>
-                            <a href="https://syed-asfar-27.github.io/Personal-Portfolio-Website-in-React/" target="_blank" class="projects__button">
+                            <img src="assets/img/project1.png" alt="Project Image" class="projects__img">
+                            <span class="projectss__subtitle">Web Development</span>
+                            <h1 class="projects__title">Resume Website In React</h1>
+                            <a href="https://resume-website-in-react.netlify.app/" target="_blank" class="projects__button">
                                 View Demo <i class="ri-arrow-right-line"></i>
                             </a>
                         </div>
                         <div class="projects__content swiper-slide">
-                            <img src="assets/img/project2.jpg" alt="Project Image" class="projects__img">
-                            <span class="projectss__subtitle">Web</span>
-                            <h1 class="projects__title">Online Math Teaching</h1>
-                            <a href="#" class="projects__button">
+                            <img src="assets/img/project2.png" alt="Project Image" class="projects__img">
+                            <span class="projectss__subtitle">Web Development</span>
+                            <h1 class="projects__title">ACM COMSATS Lahore Website</h1>
+                            <!-- <a href="#" class="projects__button">
                                 View Demo <i class="ri-arrow-right-line"></i>
-                            </a>
+                            </a> -->
+                            In Progress
                         </div>
-                        <div class="projects__content swiper-slide">
-                            <img src="assets/img/project3.jpg" alt="Project Image" class="projects__img">
-                            <span class="projectss__subtitle">Video Editing</span>
-                            <h1 class="projects__title">Vlog Video</h1>
-                            <a href="../public/Video-Editing-Project-1.html" class="projects__button">
-                                View Demo <i class="ri-arrow-right-line"></i>
-                            </a>
-                        </div>
-                        <div class="projects__content swiper-slide">
-                            <img src="assets/img/project4.jpg" alt="Project Image" class="projects__img">
-                            <span class="projectss__subtitle">Web</span>
-                            <h1 class="projects__title">This Website</h1>
-                            <a href="https://syedasfar.live/" target="_blank" class="projects__button">
-                                View Demo <i class="ri-arrow-right-line"></i>
-                            </a>
-                        </div>
-                    </div> -->
+                        
+                        
+                    </div> 
 
                     <!-- Swiper Arrows -->
-                    <!-- <div class="swiper-button-next">
+                    <div class="swiper-button-next">
                         <i class="ri-arrow-right-s-line"></i>
                     </div>
                     <div class="swiper-button-prev">
                         <i class="ri-arrow-left-s-line"></i>
-                    </div> -->
+                    </div>
 
                     <!-- Swiper Pagination -->
-                    <!-- <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination"></div>
                     </div>
                 </div>
-            </section> -->
+            </section>
 
             <!-- ==================== TESTIMONIAL ====================
             <section class="testimonial section">
