--- a/index.html
+++ b/index.html
@@ -564,18 +564,27 @@
                             </div>
                             <div>
                                 <h3 class="qualification__name">IEEE Robotics & Automation Society</h3>
-                                <span class="qualification__country">Deputy Director Registrations</span> <br>
-                                <span class="qualification__year">September 2022 - Present</span>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Director of Registrations (Promotion)</span> <br>
+                                <span class="qualification__year">September 2023 - Present</span>
+                                <br><br>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Deputy Director of Registrations</span> <br>
+                                <span class="qualification__year">September 2022 - August 2023</span>
                             </div>
                             <div>
                                 <h3 class="qualification__name">Google Developers Student Club (GDSC)</h3>
-                                <span class="qualification__country">Marketing Lead</span> <br>
-                                <span class="qualification__year">October 2022 - April 2023</span>
+                                <span style="margin-left: 10px;" class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Data Science Lead</span> <br>
+                                <span style="margin-left: 10px;" class="qualification__year">October 2023 - Present</span>
+                                <br><br>
+                                <span style="margin-left: 10px;" class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Marketing Lead</span> <br>
+                                <span style="margin-left: 10px;" class="qualification__year">October 2022 - September 2023</span>
                             </div>
                             <div>
                                 <h3 class="qualification__name">Association for Computing Machinery (ACM)</h3>
-                                <span class="qualification__country">Deputy Director Registrations</span> <br>
-                                <span class="qualification__year">October 2022 - February 2023</span>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Director of Registrations (Promotion)</span> <br>
+                                <span class="qualification__year">Febraury 2023 - Present</span>
+                                <br><br>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Deputy Director of Registrations</span> <br>
+                                <span class="qualification__year">October 2022 - January 2023</span>
                             </div>
                         </div>
                     </div>
