--- a/index.html
+++ b/index.html
@@ -508,34 +508,34 @@
 
                         <div class="qualification__info">
                             <div>
-                                <h3 class="qualification__name">Bachelor of Software Engineering</h3>
-                                <span class="qualification__country">COMSATS University Lahore Campus</span> <br>
-                                <span class="qualification__year">February 2021 - January 2025</span></p>
-                            </div>
-
-                            <div>
-                                <h3 class="qualification__name">Artificial Intelligence & Machine Learning</h3>
-                                <span class="qualification__country">NAVTTC (Superior Gold Campus)</span> <br>
-                                <span class="qualification__year">June 2023 - Present</span>
-                            </div>
-
-                            <div>
-                                <h3 class="qualification__name">Advance Frontend Web Development</h3>
-                                <span class="qualification__country">PNY Trainings</span> <br>
-                                <span class="qualification__year">June 2022 -  August 2022</span>
-                            </div>
-                            
-                            <div>
-                                <h3 class="qualification__name">FSc Pre-Engineering</h3>
-                                <span class="qualification__country">Punjab Group of Colleges</span> <br>
-                                <span class="qualification__year">2018 - 2020</span>
+                                <h3 class="qualification__name">Google Developers Student Club (GDSC)</h3>
+                                <span style="margin-left: 10px;" class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Data Science Lead</span> <br>
+                                <span style="margin-left: 10px;" class="qualification__year">October 2023 - Present</span>
+                                <br><br>
+                                <span style="margin-left: 10px;" class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Marketing Lead</span> <br>
+                                <span style="margin-left: 10px;" class="qualification__year">October 2022 - September 2023</span>
                             </div>
                             <div>
-                                <h3 class="qualification__name">Matriculation</h3>
-                                <span class="qualification__country">Hashmat Memorial School</span> <br>
-                                <span class="qualification__year">2016 - 2018</span>
+                                <h3 class="qualification__name">IEEE Robotics & Automation Society</h3>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Director of Registrations (Promotion)</span> <br>
+                                <span class="qualification__year">September 2023 - Present</span>
+                                <br><br>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Deputy Director of Registrations</span> <br>
+                                <span class="qualification__year">September 2022 - August 2023</span>
                             </div>
-                            
+                            <div>
+                                <h3 class="qualification__name">Association for Computing Machinery (ACM)</h3>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Director of Registrations (Promotion)</span> <br>
+                                <span class="qualification__year">Febraury 2023 - Present</span>
+                                <br><br>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Deputy Director of Registrations</span> <br>
+                                <span class="qualification__year">October 2022 - January 2023</span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__name">Artificial Intelligence Community of Pakistan (AICP)</h3>
+                                <span class="qualification__country">Assistant Director of Registrations</span> <br>
+                                <span class="qualification__year">April 2023 - Present</span>
+                            </div>
                         </div>
                     </div>
 
