--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                             <div>
                                 <h3 class="qualification__name">Artificial Intelligence & Machine Learning</h3>
                                 <span class="qualification__country">NAVTTC (Superior Gold Campus)</span> <br>
-                                <span class="qualification__year">June 2023 - Present</span>
+                                <span class="qualification__year">June 2023 - September 2023</span>
                             </div>
 
                             <div>
@@ -554,11 +554,11 @@
                         <div class="qualification__info">
                             <div>
                                 <h3 class="qualification__name">Google Developers Student Club (GDSC)</h3>
-                                <span style="margin-left: 10px;" class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Data Science Lead</span> <br>
-                                <span style="margin-left: 10px;" class="qualification__year">October 2023 - Present</span>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Data Science Lead</span> <br>
+                                <span class="qualification__year">October 2023 - Present</span>
                                 <br><br>
-                                <span style="margin-left: 10px;" class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Marketing Lead</span> <br>
-                                <span style="margin-left: 10px;" class="qualification__year">October 2022 - September 2023</span>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Marketing Lead</span> <br>
+                                <span class="qualification__year">October 2022 - September 2023</span>
                             </div>
                             <div>
                                 <h3 class="qualification__name">IEEE Robotics & Automation Society</h3>
