--- a/index.html
+++ b/index.html
@@ -152,19 +152,19 @@
                                     <path d="M16 16v-3a2 2 0 0 0 -4 0" />
                                 </svg>
                             </a>
-                            <a href="https://www.facebook.com/syedasfar786" target="_blank" class="home__social-link">
+                            <a href="https://www.facebook.com/syedasfar79" target="_blank" class="home__social-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                     <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
                                 </svg>
                             </a>
-                            <a href="https://github.com/Syed-Asfar-27" target="_blank" class="home__social-link">
+                            <a href="https://github.com/syed-asfar-ahmad" target="_blank" class="home__social-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                     <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
                                 </svg>
                             </a>
-                            <a href="https://twitter.com/bukhari_asfar" target="_blank" class="home__social-link">
+                            <a href="https://twitter.com/asfar_ahmad_" target="_blank" class="home__social-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                     <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
@@ -516,7 +516,7 @@
                             <div>
                                 <h3 class="qualification__name">Artificial Intelligence & Machine Learning</h3>
                                 <span class="qualification__country">NAVTTC (Superior Gold Campus)</span> <br>
-                                <span class="qualification__year">June 2023 - September 2023</span>
+                                <span class="qualification__year">June 2023 - Present</span>
                             </div>
 
                             <div>
@@ -553,33 +553,29 @@
                         
                         <div class="qualification__info">
                             <div>
-                                <h3 class="qualification__name">Google Developers Student Club (GDSC)</h3>
-                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Data Science Lead</span> <br>
-                                <span class="qualification__year">October 2023 - Present</span>
-                                <br><br>
-                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Marketing Lead</span> <br>
-                                <span class="qualification__year">October 2022 - September 2023</span>
-                            </div>
-                            <div>
-                                <h3 class="qualification__name">IEEE Robotics & Automation Society</h3>
-                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Director of Registrations (Promotion)</span> <br>
-                                <span class="qualification__year">September 2023 - Present</span>
-                                <br><br>
-                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Deputy Director of Registrations</span> <br>
-                                <span class="qualification__year">September 2022 - August 2023</span>
-                            </div>
-                            <div>
-                                <h3 class="qualification__name">Association for Computing Machinery (ACM)</h3>
-                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Director of Registrations (Promotion)</span> <br>
-                                <span class="qualification__year">Febraury 2023 - Present</span>
-                                <br><br>
-                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Deputy Director of Registrations</span> <br>
-                                <span class="qualification__year">October 2022 - January 2023</span>
-                            </div>
-                            <div>
                                 <h3 class="qualification__name">Artificial Intelligence Community of Pakistan (AICP)</h3>
                                 <span class="qualification__country">Assistant Director of Registrations</span> <br>
                                 <span class="qualification__year">April 2023 - Present</span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__name">Association for Computing Machinery (ACM)</h3>
+                                <span class="qualification__country">Director Registrations</span> <br>
+                                <span class="qualification__year">February 2023 - Present</span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__name">IEEE Robotics & Automation Society</h3>
+                                <span class="qualification__country">Deputy Director Registrations</span> <br>
+                                <span class="qualification__year">September 2022 - Present</span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__name">Google Developers Student Club (GDSC)</h3>
+                                <span class="qualification__country">Marketing Lead</span> <br>
+                                <span class="qualification__year">October 2022 - April 2023</span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__name">Association for Computing Machinery (ACM)</h3>
+                                <span class="qualification__country">Deputy Director Registrations</span> <br>
+                                <span class="qualification__year">October 2022 - February 2023</span>
                             </div>
                         </div>
                     </div>
@@ -895,7 +891,7 @@
                             <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
                           </svg>
                     </a>
-                    <a href="https://twitter.com/bukhari_asfar" target="_blank" class="home__social-link">
+                    <a href="https://twitter.com/Syed_Asfar_27" target="_blank" class="home__social-link">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
