--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                             <h3 class="home__info-title">
                                 BIOGRAPHY
                             </h3>
-                            <p class="home__info-description">
-                                Web Developer with experience in developing UI (User Interface), testing and debugging. Eager to obtain a challenging position at a prestigious company that will expand my learning and build upon my developer skills.
+                            <p style="text-align: justify;" class="home__info-description">
+                                Tech-savvy professional specializing in Web Development, Data Science, and Artificial Intelligence. Proficient in Python, Data Analysis, and Machine Learning with a strong foundation in Software Engineering from COMSATS University Lahore. Demonstrated leadership and organizational skills. Eager to contribute expertise and drive innovation in a dynamic professional environment.
                             </p>
                         </div>
                     
