--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                     <div class="projects__container swiper">
                         <div class="swiper-wrapper">
                             <div class="projects__content swiper-slide">
-                                <img src="a" alt="Project Image" class="projects__img">
+                                <img src="assets/img/project1.png" alt="Project Image" class="projects__img">
                                 <div>
                                     <span class="projectss__subtitle">Web Development</span>
                                     <h1 class="projects__title">Resume Website In React</h1>
@@ -650,9 +650,6 @@
                                 <div>
                                     <span class="projectss__subtitle">Web Development</span>
                                     <h1 class="projects__title">ACM COMSATS Website</h1>
-                                    <!-- <a href="https://resume-website-in-react.netlify.app/" target="_blank" class="projects__button">
-                                        View Demo <i class="ri-arrow-right-line"></i>
-                                    </a> -->
                                 In Progress
                                 </div>
                             </div>
