--- a/index.html
+++ b/index.html
@@ -499,6 +499,14 @@
                         
                         <div class="qualification__info">
                             <div>
+                                <h3 class="qualification__name">Artificial Intelligence Community of Pakistan (AICP)</h3>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Assistant Vice President Academics</span> <br>
+                                <span class="qualification__year">November 2023 - Present</span>
+                                <br><br>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Assistant Director of Registrations</span> <br>
+                                <span class="qualification__year">April 2023 - November 2023</span>
+                            </div>      
+                            <div>
                                 <h3 class="qualification__name">Google Developers Student Club (GDSC)</h3>
                                 <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Data Science Lead</span> <br>
                                 <span class="qualification__year">October 2023 - Present</span>
@@ -516,16 +524,11 @@
                             </div>
                             <div>
                                 <h3 class="qualification__name">Association for Computing Machinery (ACM)</h3>
-                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Director of Registrations (Promotion)</span> <br>
+                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Director of Registrations</span> <br>
                                 <span class="qualification__year">Febraury 2023 - Present</span>
                                 <br><br>
                                 <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Deputy Director of Registrations</span> <br>
                                 <span class="qualification__year">October 2022 - January 2023</span>
-                            </div>
-                            <div>
-                                <h3 class="qualification__name">Artificial Intelligence Community of Pakistan (AICP)</h3>
-                                <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Assistant Director of Registrations</span> <br>
-                                <span class="qualification__year">April 2023 - Present</span>
                             </div>
                         </div>
                     </div>
@@ -538,20 +541,29 @@
                 <span class="section__subtitle">What Social Work I did</span>
                 <div class="volunteer__container container grid section__border">
                     <div class="volunteer__card">
+                        <img class="vlg_logo" src="assets/img/Volunteer_Leading_Governance.jpeg" alt="Shaukat Khanum Logo"><br><br>
+                        <h2 class="volunteer__title">VLG</h2> 
+                        <p class="volunteer__description">
+                            Social Media Team <br><br>
+                            January 2024 - Present
+                        </p>
+                        <div class="volunteer__border"></div>
+                    </div>
+                    <div class="volunteer__card">
+                        <img class="vlg_logo" src="assets/img/Volunteer_Leading_Governance.jpeg" alt="Shaukat Khanum Logo"><br><br>
+                        <h2 class="volunteer__title">VLG</h2> 
+                        <p class="volunteer__description">
+                            Complaint Representative <br><br>
+                            May 2023 - January 2024
+                        </p>
+                        <div class="volunteer__border"></div>
+                    </div>
+                    <div class="volunteer__card">
                         <img class="shaukat_logo" src="assets/img/shaukat-khanum.png" alt="Shaukat Khanum Logo"><br><br>
                         <h2 class="volunteer__title">Shaukat Khanum Hospital</h2> 
                         <p class="volunteer__description">
                             Zakat Campaign Fundraiser <br><br>
                             Mar 2023 - May 2023
-                        </p>
-                        <div class="volunteer__border"></div>
-                    </div>
-                    <div class="volunteer__card">
-                        <img class="futurefest_logo" src="assets/img/futurefest.png" alt="Future Fest Logo"><br><br>
-                        <h2 class="volunteer__title">The Future Fest</h2>
-                        <p class="volunteer__description">
-                            Event Management <br> <br>
-                            Dec 2022 - Jan 2023
                         </p>
                         <div class="volunteer__border"></div>
                     </div>
@@ -650,6 +662,9 @@
                                 <div>
                                     <span class="projectss__subtitle">Web Development</span>
                                     <h1 class="projects__title">ACM COMSATS Website</h1>
+                                    <!-- <a href="https://resume-website-in-react.netlify.app/" target="_blank" class="projects__button">
+                                        View Demo <i class="ri-arrow-right-line"></i>
+                                    </a> -->
                                 In Progress
                                 </div>
                             </div>
