--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                             <div>
                                 <h3 class="qualification__name">IEEE Robotics & Automation Society</h3>
                                 <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Director of Registrations (Promotion)</span> <br>
-                                <span class="qualification__year">September 2023 - Present</span>
+                                <span class="qualification__year">September 2023 - February 2024</span>
                                 <br><br>
                                 <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Deputy Director of Registrations</span> <br>
                                 <span class="qualification__year">September 2022 - August 2023</span>
