--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                             <div>
                                 <h3 class="qualification__name">Pak Elektron Limited (PEL)</h3>
                                 <span class="qualification__country">IT Intern</span> <br>
-                                <span class="qualification__year">July 2024 - Present</span>
+                                <span class="qualification__year">July 2024 - August 2024</span>
                             </div> 
                             <div>
                                 <h3 class="qualification__name">Amal Academy</h3>
