--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="Syed, Asfar, Syed Asfar, Syed Asfar Ahmad, Asfar Ahmad, Syed Asfar Ahmad Bukhari">
         <meta name="author" content="Syed Asfar Ahmad Bukhari">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta property="og:url" content="https://syedasfar.live/" />
+        <meta property="og:url" content="https://syedasfar.tech" />
         <meta property="og:type" content="Website" />
         <meta property="og:title" content="Syed Asfar Ahmad's Personal Portfolio Website" />
         <meta property="og:description" content="Tech-savvy professional specializing in Web Development, Data Science, and Artificial Intelligence. Proficient in Python, Data Analysis, and Machine Learning with a strong foundation in Software Engineering from COMSATS University Lahore. Demonstrated leadership and organizational skills. Eager to contribute expertise and drive innovation in a dynamic professional environment." />
