--- a/index.html
+++ b/index.html
@@ -689,12 +689,11 @@
                             <div class="projects__content swiper-slide">
                                 <img src="assets/img/project2.png" alt="Project Image" class="projects__img">
                                 <div>
-                                    <span class="projectss__subtitle">Web Development</span>
-                                    <h1 class="projects__title">ACM COMSATS Website</h1>
-                                    <!-- <a href="https://resume-website-in-react.netlify.app/" target="_blank" class="projects__button">
+                                    <span class="projectss__subtitle">MERN Stack</span>
+                                    <h1 class="projects__title">PEL Medical Care</h1>
+                                    <a href="https://pel-medical-care-website.onrender.com" target="_blank" class="projects__button">
                                         View Demo <i class="ri-arrow-right-line"></i>
-                                    </a> -->
-                                In Progress
+                                    </a>
                                 </div>
                             </div>
                         </div> 
