--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                                         <div>
                                             <h3 class="qualification__name">Association for Computing Machinery (ACM)</h3>
                                             <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Director of Registrations</span> <br>
-                                            <span class="qualification__year">Febraury 2023 - Present</span>
+                                            <span class="qualification__year">Febraury 2023 - September 2024</span>
                                             <br><br>
                                             <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Deputy Director of Registrations</span> <br>
                                             <span class="qualification__year">October 2022 - January 2023</span>
@@ -552,7 +552,7 @@
                                         <div>
                                             <h3 class="qualification__name">Google Developers Student Club (GDSC)</h3>
                                             <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Data Science Lead</span> <br>
-                                            <span class="qualification__year">October 2023 - Present</span>
+                                            <span class="qualification__year">October 2023 - September 2024</span>
                                             <br><br>
                                             <span class="qualification__country"><span style="color: #00abfb; font-size: 20px;">&#10159;</span>&nbsp;Marketing Lead</span> <br>
                                             <span class="qualification__year">October 2022 - September 2023</span>
