--- a/index.html
+++ b/index.html
@@ -696,6 +696,16 @@
                                     </a>
                                 </div>
                             </div>
+                            <div class="projects__content swiper-slide">
+                                <img src="assets/img/project3.png" alt="Project Image" class="projects__img">
+                                <div>
+                                    <span class="projectss__subtitle">Web Development & Machine Learning</span>
+                                    <h1 class="projects__title">Detection of Retinopathy <br> Stages and their <br> Recommendations</h1>
+                                    <!-- <a href="https://pel-medical-care-website.onrender.com" target="_blank" class="projects__button"> -->
+                                        <!-- View Demo <i class="ri-arrow-right-line"></i> -->In Progress
+                                    </a>
+                                </div>
+                            </div>
                         </div> 
                     
                         <!-- Swiper Arrows -->
